# olist-discord-bots-mirror

./: .gitignore  PERMITIR-SECRETS-GITHUB.md  README.md
discord-bot-gilberto/: .gitignore  .shardcloud  README.md  bot_data.db  main.py  pyproject.toml
discord-bot-gilberto/bot_commands/: admin_commands.py  constants.py  general_commands.py  handle_commands.py  migration_commands.py  reindex_commands.py
discord-bot-gilberto/bot_events/: handle_events.py
discord-bot-gilberto/scripts/: export_db.py
discord-bot-gilberto/tests/: __init__.py  conftest.py  test_export_db.py
discord-bot-gilberto/utils/: __init__.py  database.py  db_export.py
discord-bot-jurandir/: .shardcloud  README.md  main.py  pyproject.toml
discord-bot-jurandir/bot_commands/: handle_roles.py  partners_roles_list.py
discord-bot-jurandir/bot_events/: handle_events.py
discord-bot-sebastiao/: .gitignore  .shardcloud  README.md  main.py  pyproject.toml  requirements.txt  threads.db
discord-bot-sebastiao/bot_commands/: admin_commands.py  constants.py  general_commands.py  handle_questions.py
discord-bot-sebastiao/bot_events/: constants.py  handle_events.py
discord-bot-sebastiao/bot_events/handlers/: __init__.py  mcp_handler.py  n8n_handler.py
discord-bot-sebastiao/scripts/: export_db.py
discord-bot-sebastiao/tests/: conftest.py  test_export_db.py  test_handlers.py  test_imports.py
discord-bot-sebastiao/utils/: database.py  db_export.py  utils.py
olist-docs-mcp-client/: .env.example  .gitignore  README.md  pyproject.toml
olist-docs-mcp-client/orchestrator/: __init__.py  app.py  llm.py  prompts.py
olist-docs-mcp-client/tests/: __init__.py  test_prompts.py
olist-docs-mcp-server/: GUIA_ITENS.md  README.md  pyproject.toml
olist-docs-mcp-server/olist_docs_mcp_server/: __init__.py  __main__.py  server.py
olist-docs-mcp-server/olist_docs_mcp_server/tools/: __init__.py  doc_fetcher.py  olist_docs.py
vnda-docs-mcp-client/: .env.example  README.md  pyproject.toml
vnda-docs-mcp-client/orchestrator/: __init__.py  app.py  llm.py  prompts.py
vnda-docs-mcp-server/: GUIA_ITENS.md  README.md  pyproject.toml
vnda-docs-mcp-server/vnda_docs_mcp_server/: __init__.py  __main__.py  server.py
vnda-docs-mcp-server/vnda_docs_mcp_server/tools/: __init__.py  (+2 more)
