[project]
name = "discord-bot-sebastiao"
version = "1.0.0"
description = "Discord bot for managing roles and partners"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "allure-pytest>=2.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-html>=4.2.0",
]

